--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@capacitor/android": "^1.0.0-beta.11",
+    "@capacitor/cli": "^1.0.0-beta.11",
+    "@capacitor/core": "^1.0.0-beta.11",
+    "@ionic/pwa-elements": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
