--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/cli": "^1.0.0-beta.11",
     "@capacitor/core": "^1.0.0-beta.11",
     "@ionic/pwa-elements": "^1.0.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
