set windows android studio path

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,6 @@
   "appId": "pro.koehler.relationship",
   "appName": "Relationship App",
   "bundledWebRuntime": false,
+  "windowsAndroidStudioPath": "F:\\Program Files\\Android\\Android Studio\\bin\\studio64.exe",
   "webDir": "dist"
 }
