npm install fb signin and fullcalendar

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ionic/pwa-elements": "^1.0.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.2",
+    "vue-facebook-signin-button": "^1.0.1",
+    "vue-full-calendar": "^2.7.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
